--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.6.2",
+    "gsap": "^3.12.7",
+    "lenis": "^1.2.3",
     "next": "15.2.2",
     "next-intl": "^3.0.0-beta.19",
     "react": "^19.0.0",
